applications/sonarr/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: sonarr
  name: sonarr-dep
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: sonarr
    spec:
      securityContext:
        runAsUser: 3000
        runAsGroup: 3000
        fsGroup: 3000
      containers:
        - image: linuxserver/sonarr:4.0.12 # change when updating
          name: sonarr
          ports:
            - containerPort: 8989
          resources: {}
          volumeMounts:
            - name: sonarr-vol
              mountPath: /config
            - name: downloads-vol
              mountPath: /downloads
            - name: media-vol
              mountPath: /media
      volumes:
        - name: sonarr-vol
          persistentVolumeClaim:
            claimName: sonarr-pvc
        - name: downloads-vol
          persistentVolumeClaim:
            claimName: downloads-pvc
        - name: media-vol
          persistentVolumeClaim:
            claimName: media-pvc
status: {}
