applications/sonarr/service.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: sonarr
  name: sonarr-svc
  namespace: media
spec:
  ports:
    - port: 8989
      protocol: TCP
      targetPort: 8989
  selector:
    app: sonarr
status:
  loadBalancer: {}
